# akiprobe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql.yml  ut.yml
cmake/: pico_sdk_import.cmake
src/: board.h  board_lpc11u35.c  cmsis_dap_device.c  cmsis_dap_device.h  lpc11u35.ld  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h  vendor_device.c  vendor_device.h
src/ae_lpc11u35_mb/: DAP_config.h  board.c
src/cmsis-dap/: SWO.c
src/rp2040/: DAP_config.h  board.c
tests/: CMakeLists.txt  DAP_config.h  class_test.cpp  cmsis_compiler.h  mock_tinyusb.cpp  mock_tinyusb.h  tusb_config.h
